--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,6 @@ flask>=2.0.0
 opencv-python>=4.5.0
 numpy>=1.20.0
 pyserial>=3.5
-ultralytics>=0.0.0 
+ultralytics>=0.0.0
+discord.py>=2.0.0
+mysql-connector-python>=8.0.0
